# ChangeLog for dev-python/argh
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Mar 2012; James Rowe <jnrowe@gmail.com> argh-0.15.0.ebuild,
  argh-0.15.1.ebuild:
  Shouldn't restrict Python 3.x.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> -argh-0.14.2.ebuild,
  argh-0.15.0.ebuild:
  Keyworded x86.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> argh-0.15.0.ebuild:
  Keyworded amd64.

*argh-0.15.1 (19 Mar 2012)

  19 Mar 2012; James Rowe <jnrowe@gmail.com> +argh-0.15.1.ebuild:
  Version bump [570].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> argh-0.14.2.ebuild,
  argh-0.15.0.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> argh-0.14.2.ebuild,
  argh-0.15.0.ebuild:
  Removed Python 2.4 support.

*argh-0.15.0 (25 Feb 2012)

  25 Feb 2012; James Rowe <jnrowe@gmail.com> +argh-0.15.0.ebuild:
  Version bump [555].

  18 Nov 2011; James Rowe <jnrowe@gmail.com> -argh-0.14.1.ebuild,
  argh-0.14.2.ebuild:
  Keyworded x86.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> argh-0.14.2.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*argh-0.14.2 (19 Oct 2011)

  19 Oct 2011; James Rowe <jnrowe@gmail.com> +argh-0.14.2.ebuild:
  Version bump [470].

  06 Oct 2011; James Rowe <jnrowe@gmail.com> -argh-0.14.0.ebuild,
  argh-0.14.1.ebuild:
  Keyworded x86.

  06 Oct 2011; James Rowe <jnrowe@gmail.com> argh-0.14.1.ebuild:
  Keyworded amd64.

*argh-0.14.1 (06 Sep 2011)

  06 Sep 2011; James Rowe <jnrowe@gmail.com> +argh-0.14.1.ebuild:
  Version bump [463].

  20 Apr 2011; James Rowe <jnrowe@gmail.com> argh-0.14.0.ebuild:
  Keyworded x86.

  08 Apr 2011; James Rowe <jnrowe@gmail.com> argh-0.14.0.ebuild:
  Keyworded amd64.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> argh-0.14.0.ebuild:
  Keyworded ~x86.

*argh-0.14.0 (09 Mar 2011)

  09 Mar 2011; James Rowe <jnrowe@gmail.com> +argh-0.14.0.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [305].
