@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Apr 2012; James Rowe <jnrowe@gmail.com> argh-0.15.0.ebuild,
+  argh-0.15.1.ebuild:
+  Switched to python-distutils-ng eclass.
+
   27 Mar 2012; James Rowe <jnrowe@gmail.com> argh-0.15.0.ebuild,
   argh-0.15.1.ebuild:
   Shouldn't restrict Python 3.x.
